# aws-profile-select

./: .codecov.yml  .mise.toml  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  dist-workspace.toml  release-steps-mise.md
.config/: nextest.toml
.github/: release-please-config.json
.github/workflows/: main.yml  release-please.yml  release.yml  wf_run.yml
docs/: artifact-attestations.md
src/: lib.rs
src/aws-profile-select/: cli.rs  main.rs  prompt.rs  sso.rs
tests/: cli.rs  parse_profiles.rs  parse_profiles_test.rs
tests/common/: mod.rs
