[package]
name = "aws-profile-select"
version = "0.1.1"
edition = "2021"

[lib]
name = "aws_profile_select"
path = "src/lib.rs"

[[bin]]
name = "aws-profile-select"
path = "src/aws-profile-select/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.15.0"
dialoguer = "0.12.0"
