[package]
name = "aws-profile-select"
version = "0.4.0"
edition = "2021"
description = "Interactive AWS profile selector for the terminal"
repository = "https://github.com/sirajulm/aws-profile-select"
license = "MIT OR Apache-2.0"

[lib]
name = "aws_profile_select"
path = "src/lib.rs"

[[bin]]
name = "aws-profile-select"
path = "src/aws-profile-select/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
config = "0.15.0"
dialoguer = "0.12.0"
dirs = "6"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
